--- a/docroot/themes/humsci/humsci_basic/src/scss/tools/_mixins.general.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/tools/_mixins.general.scss
@@ -104,7 +104,7 @@
 
 @mixin hb-unordered-list {
   list-style-type: none;
-  margin: hb-calculate-rems(28px) 0;
+  margin: 0;
 
   li {
     position: relative;
@@ -133,7 +133,7 @@
 @mixin hb-ordered-list {
   counter-reset: li;
   list-style-type: none;
-  margin: hb-calculate-rems(28px) 0;
+  margin: 0;
 
   li {
     position: relative;
